--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <div class="inicio-container">
-  <img class="logo" src="../../../assets/LogoAnimado.gif" alt="GIF Ejemplo" />
+  <img class="logo" src="../../../assets/LogoAnimado.gif" alt="Logo GIF" />
   <h1>Transforma tu manera de estudiar con nuestra app educativa gratuita</h1>
   <h2>
     Acceso ilimitado a libros escolares actualizados, recursos de estudio y más.
