--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -255,6 +255,7 @@
         <h3>Enlaces</h3>
         <ul>
           <li><a [routerLink]="['inicio']">Inicio</a></li>
+          <li><a [routerLink]="['acerca_de']">Acerca de</a></li>
           <li><a [routerLink]="['caracteristicas']">Características</a></li>
           <li><a [routerLink]="['demo']">Demo</a></li>
           <li><a [routerLink]="['contacto']">Contacto</a></li>
